# agent

./: .env  .env.example  .gitignore  DEEPSEEK_GUIDE.md  PROJECT_SUMMARY.md  README.md  config.local.yaml.example  config.yaml  install.py  pyproject.toml  requirements.txt  setup_keys.py
backups/: test_0.txt.20250714_210750.bak
examples/: basic_usage.py  complete_demo.py  deepseek_demo.py
file_agent/: __init__.py  agent.py  ai_providers.py  cli.py  config.py  file_manager.py
file_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_config.py  test_deepseek_provider.py  test_file_manager.py
workspace/: deepseek_test.txt  demo.txt  log_20250714_210523.txt  test_1.txt  test_2.txt
